--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=SpringBootSecurity-DB
+
+## jsp 파일 처리하기 위한 prefix와 suffix를 추가
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#편하게 접속하기 위해 프로퍼티에 임시로 id/pw 설정
+spring.security.user.name=test
+spring.security.user.password=123456
+spring.security.user.roles=MANAGER
+
+
+##db설정
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url= jdbc:oracle:thin:@127.0.0.1:1521:XE
+spring.datasource.username=hr
+spring.datasource.password=hr
+
+
+
+# 서버설정(기본설정임 안해도됨)
+server.port=8080
+server.servlet.context-path=/
+server.servlet.encoding.charset=UTF-8
+
+
+# mybatis 설정
+## classpath는 src/main/resources는 말함
+#mybatis.config-location=classpath:mybatis-config.xml 
+#mybatis.mapper-locations=classpath:mappers/**/*.xml
