시큐리티 태그 의존성 추가

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,14 @@
 			<artifactId>spring-boot-starter-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- security 태그 의존성 -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
