--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ server.servlet.encoding.charset=UTF-8
 
 # mybatis 설정
 ## classpath는 src/main/resources는 말함
-#mybatis.config-location=classpath:mybatis-config.xml 
-#mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.config-location=classpath:mybatis-config.xml 
+mybatis.mapper-locations=classpath:mappers/**/*.xml
