--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #편하게 접속하기 위해 프로퍼티에 임시로 id/pw 설정
-spring.security.user.name=test
-spring.security.user.password=123456
-spring.security.user.roles=MANAGER
+#spring.security.user.name=test
+#spring.security.user.password=123456
+#spring.security.user.roles=MANAGER
 
 
 ##db설정
